# neuroJIT

./: .gitignore  .gitmodules  .neurojit_updates.tmp  NEUROJIT_STATUS.md  PROGRESS_REPORT.md  README.md  REAL_WORLD_USAGE.md  SELF_HEALING_WALKTHROUGH.md  build_all.sh  collect_data.sh  day1_real.csv  day2_validation.csv  deepseek_full.txt  evolution_mock.csv  print_ir.cpp  qwen32_test_prompt.txt  resource_mid.tmp  resource_peak.tmp  resource_snapshot.tmp  run_conv2d.sh  run_example.sh  run_final.sh  run_lander.sh  run_me.sh  setup_and_build.sh  temp_sim.mlir  tensorlang_training_data.jsonl  test_evo.csv  train_orchestrator.py
docs/: COMPARATIVE_EVOLUTION.md  EXPERIMENTS.md  LLM_HANDOFF.md  PHASE_4_REPORT.md  RECURSIVE_OPTIMIZATION.md  SWARM_INTELLIGENCE.md
docs/architecture/: overview.md
docs/archive/: NEUROJIT_STATUS.md  PROGRESS_REPORT.md
docs/concepts/: neurosymbolic.md  tensor_math.md
docs/demos/: autonomous_optimization.md  self_healing_lander.md
docs/planning/: compiler_dev_roadmap.txt  design_ai_opt_lang.txt
docs/research/: EXPERIMENTS.md  MODEL_EXPANSION_FEB_2026.md  PHASE_4_REPORT.md  SWARM_INTELLIGENCE.md
scripts/: build_all.sh  generate_training_data.py  offline_optimizer.py  run_example.sh  run_lander.sh
tensorlang/: CMakeLists.txt  PROGRESS_REPORT.md  README.md
tensorlang/benchmarks/: compare_bench.py  conv2d_bench.mlir  matmul_bench.mlir  matmul_pure.mlir  self_optimizing_matmul.mlir  tiled_reference.mlir
tensorlang/docs/: LLM_Integration.md  RunInstructions.md  TypeSystem.md  UserGuide.md
tensorlang/examples/: neuro_lander.mlir  neuro_lander_2d.mlir  neuro_lander_deterministic.mlir  neuro_lander_inverted.mlir  neuro_lander_v2.mlir  neuro_swarm_vector.mlir  self_rewrite_demo.mlir
tensorlang/include/tensorlang/Conversion/TensorLangToLinalg/: TensorLangToLinalg.h
tensorlang/include/tensorlang/Dialect/TensorLang/IR/: TensorLangDialect.h  TensorLangOps.h  TensorLangTypes.h
tensorlang/include/tensorlang/Dialect/TensorLang/Transforms/: Passes.h  Passes.td
tensorlang/include/tensorlang/ExecutionEngine/: JitRunner.h
tensorlang/include/tensorlang/Runtime/: ASTMutator.h  EvolutionHarness.h  ExperienceLogger.h  JitContext.h  MLIRTemplates.h  MatmulSpeedEvaluator.h  ModelRunner.h  OptimizationStrategy.h  OptimizationWorker.h  Runners.h  Runtime.h  StrategyCache.h  StrategyGA.h  VerificationSandbox.h
tensorlang/lib/: CMakeLists.txt
tensorlang/lib/Conversion/: CMakeLists.txt
tensorlang/lib/Conversion/TensorLangToLinalg/: CMakeLists.txt  TensorLangToLinalg.cpp
tensorlang/lib/Dialect/: CMakeLists.txt
tensorlang/lib/Dialect/TensorLang/: CMakeLists.txt
tensorlang/lib/Dialect/TensorLang/IR/: CMakeLists.txt  TensorLang.td  TensorLangDialect.cpp  TensorLangOps.cpp
tensorlang/lib/Dialect/TensorLang/Transforms/: CMakeLists.txt  VerifyLinearity.cpp
tensorlang/lib/ExecutionEngine/: CMakeLists.txt  JitRunner.cpp  JitRunner.cpp.patch
tensorlang/runtime/: ASTMutator.cpp  CMakeLists.txt  EvolutionHarness.cpp  ExperienceLogger.cpp  GeminiModelRunner.cpp  JitContext.cpp  LlamaCppModelRunner.cpp  MatmulSpeedEvaluator.cpp  ModelRunner.cpp  OptimizationWorker.cpp  Runtime.cpp  Runtime.h  StrategyCache.cpp  StrategyGA.cpp  VerificationSandbox.cpp  mlir_thrust.gbnf
tensorlang/runtime/grammars/: control_strategy.gbnf
tensorlang/runtime/models/: mutation.gbnf
tensorlang/test/: matmul_bufferize.mlir  matmul_lowering.mlir  matmul_lowering_linear.mlir  verify_linearity.mlir
tensorlang/test/environments/: neuro_lander_blind.mlir  neuro_lander_deterministic.mlir  neuro_state.mlir  neuro_swarm.mlir
tensorlang/tools/: CMakeLists.txt  main.cpp
tensorlang/tools/tensorlang-run/: CMakeLists.txt  tensorlang-run.cpp
